# CG2

ueb01/: CMakeLists.txt
ueb01/src/: io.c  io.h  logic.c  logic.h  main.c  scene.c  scene.h  stringOutput.c  texture.c  texture.h  types.h
ueb02/: CMakeLists.txt
ueb02/src/: debugGL.c  io.c  logic.c  logic.h  scene.c  texture.h  types.h
ueb03/: CMakeLists.txt
ueb03/src/: io.c  logic.c  logic.h  main.c  scene.c  scene.h  texture.c  types.h
ueb04/: CMakeLists.txt
ueb04/src/: debugGL.h  io.c  logic.c  logic.h  scene.c  scene.h  stringOutput.h  texture.c  texture.h  types.h
ueb05/: CMakeLists.txt
ueb05/content/textures/: day.tga  night.tga
ueb05/include/stb/: stb_image.h
ueb05/src/: CMakeCache.txt  Makefile  cmake_install.cmake  io.c  logic.c  logic.h  main.c  scene.c  scene.h  types.h  ueb05
